# mcp-server-demo

./: README.md  client.py  database.py  mcptools.py  preprocess_docs.py  pyproject.toml  test_db.py
multiAgent/: autogen_client.py  langchain_client.py  langgraph_client.py  langgraph_simple.py  langgraph_test.py
src/: compliance_warning_demo.py  embedding_service.py
src/a2a/: manager.py  protocol.py  receptionist.py  sales_consultant.py  tech_expert.py  test_client.py  utils.py
src/compliance_warning/: chroma_store_demo.py  kb.py  models.py  retrieval.py  rules.py  scoring.py  server.py  service.py
src/utils/: __init__.py  doc_parser.py
test/: evaluate_capabilities.py  test_embedding_analogy.py  test_rag_capability.py
